fixed radio button spacing

--- a/Webpage/main.css
+++ b/Webpage/main.css
@@ -76,13 +76,14 @@ p {
     background-color: #ffffff;
     border-radius: 90%;
     display: block;
-    margin-top: 5px;
-    margin-left: -10px;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    margin-left: -0.9vw;
 }
     
   }
 /* On mouse-over, add a yellow background color */
-.container:hover input ~ .checkmark {
+.checkmark:hover{
     background-color: #FABE0E;
 
   }
